--- a/src/routes/MyMoives/MyMovies.module.scss
+++ b/src/routes/MyMoives/MyMovies.module.scss
@@ -1,48 +1,81 @@
+$FONT: #c4c4d4;
+$FOCUS: #f72585;
+
 .searchMovie {
   width: 300px;
   margin: auto;
-  color: #c4c4d4;
+  color: $FONT;
 
   .searchInput {
     width: 300px;
-    height: 25px;
+    height: 35px;
     margin: 15px 0;
+    background: #29293c;
+    border-radius: 20px;
+
+    button {
+      margin-left: 20px;
+      color: $FONT;
+    }
+  }
+
+  .favorite {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 300px;
+    height: 35px;
+    margin: 15px 0;
+    font-size: large;
     background: #29293c;
     border-radius: 20px;
   }
 
-  button {
-    color: #c4c4d4;
-  }
-
   input {
+    height: 40px;
     margin-left: 10px;
-    color: #c4c4d4;
+    color: $FONT;
   }
 
-  footer {
+  .footer {
+    position: absolute;
     display: flex;
     justify-content: space-between;
     width: 300px;
     height: 30px;
     margin-top: -15px;
-    background: #29293c;
+    background-color: rgba(41, 41, 60, 70%);
     border-radius: 30px;
-    opacity: 0.7;
 
     button {
       margin: auto;
-      color: white;
+      font-weight: bold;
+      color: $FONT;
     }
 
     .tap {
-      color: #f72585;
+      color: $FOCUS;
     }
   }
 }
 
+.nosearch {
+  width: 150px;
+  margin: 150px auto;
+
+  svg {
+    fill: $FONT;
+  }
+}
+
+.search {
+  width: 20px;
+  height: 20px;
+  fill: #c4c4d4;
+}
+
 .movieItemList {
   width: 300px;
-  height: 520px;
+  height: 510px;
   overflow: scroll;
 }
