--- a/src/routes/MyMoives/Item.module.scss
+++ b/src/routes/MyMoives/Item.module.scss
@@ -4,22 +4,21 @@ $FONT: #c4c4d4;
   position: relative;
   box-sizing: border-box;
   display: flex;
-  width: 300px;
-  height: 200px;
   margin-bottom: 10px;
   color: $FONT;
   border: 1px solid #7d7d8e;
   border-radius: 20px;
 
   img {
-    width: 200px;
-    height: 198px;
+    max-width: 102px;
+    height: 150px;
+    margin: 10px;
     border-radius: 20px;
   }
 
   .movieInfo {
     align-items: center;
-    width: 100px;
+    width: 180px;
     margin: auto;
     color: $FONT;
     text-align: center;
