--- a/src/components/Modal/modal.module.scss
+++ b/src/components/Modal/modal.module.scss
@@ -1,3 +1,5 @@
+@use '/src/styles/constants/colors';
+
 .modalWrap {
   position: absolute;
   top: 0;
@@ -10,7 +12,7 @@
   justify-content: center;
   width: 100%;
   height: 100%;
-  color: #c4c4d4;
+  color: colors.$FONTCOLOR;
   background-color: rgba(0, 0, 0, 50%);
 
   .modal {
@@ -22,7 +24,7 @@
       box-sizing: border-box;
       width: 198px;
       height: auto;
-      border: 2px solid #c4c4d4;
+      border: 2px solid colors.$FONTCOLOR;
       border-radius: 20px;
     }
 
@@ -39,10 +41,12 @@
       background-color: rgba(41, 41, 60, 70%);
       border-radius: 15px;
 
-      input {
+      button {
         position: absolute;
         width: 100%;
         height: 100%;
+        font-weight: bold;
+        color: colors.$FONTCOLOR;
         cursor: pointer;
       }
     }
