feat: 즐겨찾기시 즐겨찾기이미지 색변화 및 대체 img

--- a/src/components/Modal/modal.module.scss
+++ b/src/components/Modal/modal.module.scss
@@ -28,6 +28,17 @@
       border-radius: 20px;
     }
 
+    svg {
+      position: absolute;
+      top: 10px;
+      right: 10px;
+      fill: colors.$FONTCOLOR;
+    }
+
+    .mark {
+      fill: colors.$FOCUS;
+    }
+
     .modalButton {
       position: absolute;
       bottom: 10px;
