--- a/src/routes/MyMoives/Item.module.scss
+++ b/src/routes/MyMoives/Item.module.scss
@@ -9,7 +9,26 @@
   border: 1px solid colors.$BORDER;
   border-radius: 15px;
 
+  svg {
+    position: absolute;
+    top: 10px;
+    right: 5px;
+    fill: colors.$FONTCOLOR;
+  }
+
+  .mark {
+    fill: colors.$FOCUS;
+  }
+
   img {
+    max-width: 102px;
+    height: 150px;
+    margin: 10px;
+    border-radius: 5px;
+  }
+
+  .altimg {
+    width: 102px;
     max-width: 102px;
     height: 150px;
     margin: 10px;
